--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <h1>Zabes and Ricky's Wedding</h1>
 
         <div class="countdown-container">
-            <div class="days-c">
+            <div class="countdown-el days-c">
                 <p class="big-text" id="days">0</p>
-                <span>days</span>
+                <span>Days</span>
             </div>
-            <div class="hours-c">
+            <div class="countdown-el hours-c">
                 <p class="big-text" id="hours">0</p>
-                <span>hours</span>
+                <span>Hours</span>
             </div>
-            <div class="minutes-c">
+            <div class="countdown-el minutes-c">
                 <p class="big-text" id="minutes">0</p>
-                <span>minutes</span>
+                <span>Minutes</span>
             </div>
-            <div class="seconds-c">
+            <div class="countdown-el seconds-c">
                 <p class="big-text" id="seconds">0</p>
-                <span>seconds</span>
+                <span>Seconds</span>
             </div>
         </div>
     </body>
